fix dark mode code style

--- a/static/assets/style.css
+++ b/static/assets/style.css
@@ -23,6 +23,10 @@
   .Box {
     background-color: #000 !important;
   }
+  
+  .chroma {
+    background-color: #000 !important;
+  }
 }
 
 
